main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <description>Persona che vanno al festival</description>
    <label>Attendee</label>
    <nameField>
        <label>Nome Attendee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>