main/default/objects/Attendee__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <description>email dei partecipanti</description>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>