main/default/objects/Attendee__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Numero di telefono</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>