main/default/objects/Attendee__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>Data di acquisto del biglietto</description>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>