main/default/objects/Attendee__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <description>Tipo di biglietto acquistato</description>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>General Admission</fullName>
            </value>
            <value>
                <fullName>3rd Party Ticket Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>