main/default/objects/Attendee__c/fields/Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent__c</fullName>
    <formula>IF( ISPICKVAL(Ticket_Type__c , &quot;VIP&quot;) ,  100* Tickets_Purchased__c , 50* Tickets_Purchased__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>