main/default/objects/Attendee__c/validationRules/Valid_Ticket_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Ticket_Number</fullName>
    <active>true</active>
    <description>regola di limitazione dell&#39;acquisto</description>
    <errorConditionFormula>Tickets_Purchased__c  &lt; 1 || Tickets_Purchased__c &gt; 8</errorConditionFormula>
    <errorMessage>I biglietti acquistabili sono compresi tra 1 e 8</errorMessage>
</ValidationRule>